# altprintf

./: .build.yml  .gitignore  .rspec_status  Gemfile  Makefile  README.md  altprintf  ideas.md  ideas.txt  meson.build  meson_options.txt  readme.md  uncrustify.cfg
cli/: meson.build
cli/src/: cli.c
doc/: altprintf.1.scdoc  altprintf.3.scd  altprintf.3.scd.in  altprintf.7.scd  altprintf.7.scd.in  benchmark_progress.txt  example.c  example.py  example_test.py  ideas.md  insert.py  insert_grammar.py  meson.build  spec.md
ext/: alt_printf.c  extconf.rb
gem/: .gitignore  Makefile  README.md  Rakefile  alt_printf.gemspec  alt_printf.rb  altprintf.gemspec  readme.md
gem/ext/alt_printf/: alt_printf.c  extconf.h  extconf.rb  extconf_debug.rb  extconf_dev.rb  extconf_helper.rb
gem/ext/altprintf/: ext.c  extconf_dev.rb  extconf_helper.rb
gem/lib/: alt_printf.rb  altprintf.rb
gem/lib/alt_printf/: version.rb
gem/lib/altprintf/: version.rb
gem/spec/: benchmark_progress.txt  examples_spec.rb  ruby_ext_spec.rb
gem/spec/support/: apis.rb  examples.rb  fmt_generator.rb  runner.rb
include/: apf.h  args.h  common.h  cswidth.h  debug.h  err.h  fmt.h  log.h  parse.h
spec/: altprintf_spec.rb  backends.rb  benchmark.rb  cli_runner.rb  examples_spec.rb  extension_spec.rb  fuzz_spec.rb  random_spec.rb  ruby_ext_spec.rb  spec_helper.rb  specs.rb
spec/examples/: cli.rb  generic.rb  ruby_extension.rb
spec/support/: alt_printf.rb  altprintf.rb  apis.rb  examples.rb  fmt_generator.rb  generator.rb  runner.rb  tests.rb
src/: altprintf.c  altprintf.h  args.c  cli.c  cli.h  compile.c  cswidth.c  debug.c  enums.h  err.c  fmt.c  fmt.h  fmte.c  fmte.h  list.c  list.h  log.h  main.c  meson.build  parse.c  parsef.c  parsef.h  strbuf.c  strbuf.h  syntax.h  tokens.h  va_to_list.c  va_to_list.h
subprojects/libaltprintf/: meson.build
subprojects/libaltprintf/include/: altprintf.h  fmte.h  log.h  syntax.h
subprojects/libaltprintf/include/altprintf/: altprintf.h  cwidth.h  enums.h  fmt.h  fmte.h  parsef.h  strbuf.h  syntax.h
subprojects/libaltprintf/lib/: cwidth.c
subprojects/libaltprintf/src/: assemble.c  fmt.c  fmte.c  parse.c  parsef.c  strbuf.c
test/: apf_grammar.py  examples.py  fuzz.py  fuzzer.py  grammar.py  meson.build  pyapf.c  test  test.py
